// Copyright 2020 The Measurement Proto Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.system.v1alpha;

import "google/protobuf/timestamp.proto";

option java_package = "org.wfanet.measurement.system.v1alpha";
option java_multiple_files = true;
option java_outer_classname = "GlobalComputationStatusUpdateProto";

message GlobalComputationStatusUpdate {
  message Key {
    string global_computation_id = 1;
    string global_computation_status_update_id = 2;
  }
  Key key = 1;

  // A non-trusted identifier for the creator of this status update. This is
  // for debugging purposes and can include additional information beyond what
  // is provided by authentication, e.g. the replica number of the task creating
  // this status update.
  string self_reported_identifier = 2;

  // Details on the computation's progress.
  StageDetails stage_details = 3;

  // Free-form human-readable status update message.
  string update_message = 4;

  // Only populated if an error occurred during processing.
  ErrorDetails error_details = 5;

  // Output only. When the GlobalComputationStatusUpdate was created.
  google.protobuf.Timestamp create_time = 6;

  message StageDetails {
    MpcAlgorithm algorithm = 1;

    // Each MPC algorithm has a concept of "stages" of the computation.
    // To avoid encoding these internal stage enums in the public API, Duchies
    // should use the tag number and enum name here.
    int64 stage_number = 2;
    string stage_name = 3;

    // When the stage started.
    google.protobuf.Timestamp start = 4;

    // If processing a stage fails, it may be retried. This field holds the
    // number of times the stage has been attempted. The first attempt should
    // populate this with 1, not 0.
    int64 attempt_number = 5;
  }

  enum MpcAlgorithm {
    MPC_ALGORITHM_UNKNOWN = 0;
    LIQUID_LEGIONS_V2 = 1;
  }

  message ErrorDetails {
    google.protobuf.Timestamp error_time = 1;
    ErrorType error_type = 2;

    // Human-readable error message. This should not include any sensitive info.
    string error_message = 3;

    enum ErrorType {
      ERROR_TYPE_UNKNOWN = 0;
      TRANSIENT = 1;
      PERMANENT = 2;
    }
  }
}
